# LitStream

./: .env.example  .gitignore  EVALUATION.md  HYPOTHESIS_GENERATION.md  MODEL_ROUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
litstream/: .gitignore  fileops.py  skills.py
litstream/acquire/: http.py  orchestrator.py  pdf.py  source_policy.py  sources.py  triage.py
litstream/config/: env.py  sources.yaml  task_models.yaml
litstream/config/routines/: weekly-citeseq.yaml
litstream/deliver/: digest.py  notify.py
litstream/eval/: attribution_key.example.jsonl  citation_check.py  cost_projection.py  cost_vs_performance.py  csmed_eval.py  csmed_loader.py  extraction_key.example.jsonl  extraction_score.py  mine_entity_recall.py  mslr_eval.py  mslr_loader.py  provider_bakeoff.py  run_variance.py  stats_analysis.py  synthesis_faithfulness.py  triage_context.txt  triage_eval.py  triage_set.jsonl
litstream/eval/benchmark/: biored.py  cell_ontology.py  cellxgene.py  extractors.py  fetch.py  fields.py  jnlpba.py  measeval.py  record_schema.example.json  run.py  schema.py  score.py  test_score.py
litstream/hypotheses/: __init__.py  __main__.py  cli.py  config.py  evaluate.py  filters.py  frame_extractor.py  graph_builder.py  grounding.py  io.py  normalize.py  pipeline.py  ranker.py  report.py  schema.py  templates.py  visualize.py
litstream/hypotheses/resources/: immune_cell_aliases.yml  marker_gene_aliases.yml
litstream/ledger/: cost.py  report.py  schema.sql
litstream/schedule/: cron.py  lock.py  state.py  tick.py
litstream/tasks/: models.py
litstream_evidence/: __init__.py  claim_battery.py  evidence_models.py  evidence_schema.py  ground_retrieval.py  llm_finder.py  pdf_text.py  structure_evidence.py
litstream_evidence/data/: claim_entailment_battery.json
litstream_lg/: __init__.py  graph.py  grounding.py  models.py  nodes.py  outputs.py  routing.py  run.py  state.py  synthesis_audit.py  tools.py
tests/: test_acquire.py  test_citation_check.py  test_claim_battery.py  test_eval_metrics.py  test_extraction_score.py  test_ground_retrieval.py  test_hypotheses.py  test_ledger.py  test_lg_budget.py  test_lg_caching.py  test_lg_graph.py  test_lg_grounding.py  test_lg_helpers.py  test_lg_models_ledger.py  test_lg_node_integration.py  test_lg_outputs.py  test_lg_routing_models.py  test_lg_tools.py  test_library.py  test_llm_finder.py  test_mine_entity_recall.py  test_schedule.py  test_structure_evidence.py  test_synthesis_audit.py  test_synthesis_faithfulness.py
tests/fixtures/hypotheses/: gold_frames.jsonl
tests/fixtures/hypotheses/evidence/: smoke_corpus.json
